# distimate

./: .build.yml  Cargo.toml  README.md  TODO.md
src/: error.rs  estimation_distribution.rs  fit_quality.rs  lib.rs  prelude.rs
src/distributions/: mod.rs  normal.rs  pert.rs  triangular.rs
