[package]
name = "distimate"
version = "0.1.0"
edition = "2021"
authors = ["Stephen Waits <steve@waits.net>"]
description = "A crate providing probability distributions for estimation and risk analysis"
license = "MIT"
repository = "https://github.com/swaits/distimate"
documentation = "https://docs.rs/distimate"
readme = "README.md"
keywords = ["probability", "estimation", "risk-analysis", "monte-carlo", "pert"]
categories = ["mathematics", "science", "simulation"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.5"
statrs = "0.17.1"
thiserror = "1.0.63"

[dev-dependencies]
approx = "0.5.1"
rand = { version = "0.8.5", features = ["std_rng"] }
